<resources>
    <string name="app_name">AutomaText</string>
    <string name="action_settings">Settings</string>
    <string name="add">+</string>
    <string name="to">To :</string>
    <string name="message">Message :</string>
    <string name="when">When :</string>
    <string name="time">00:00 AM</string>
    <string name="date">00/00/0000</string>
    <string name="submit">Save Text</string>
    <string name="delete">Delete Text</string>
    <string name="delete_all">Delete All</string>
    <string name="edit">Edit</string>
</resources>
